Create endpoints for retrieve and remove SpaceType (#127)
