# public/docs/openapi.yaml
@@ -14,6 +14,7 @@ info:
     - Organizações
     - Selos
     - Tags
+    - Tipos de Espaço
     - Usuários
 
     Links Importantes:
@@ -127,6 +128,10 @@ paths:
     $ref: './components/paths/space/Item.yaml'
   /spaces/{id}/images:
     $ref: './components/paths/space/UpdateImage.yaml'
+  /space-types:
+    $ref: './components/paths/space-type/Collection.yaml'
+  /space-types/{id}:
+    $ref: './components/paths/space-type/Item.yaml'
   /tags:
     $ref: './components/paths/tag/Collection.yaml'
   /tags/{id}:
@@ -161,6 +166,8 @@ components:
       $ref: './components/schemas/seal.yaml'
     Space:
       $ref: './components/schemas/space.yaml'
+    SpaceType:
+      $ref: './components/schemas/space-type.yaml'
     Tag:
       $ref: './components/schemas/tag.yaml'
     User:
